CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(tftdemo)

INCLUDE_DIRECTORIES(.)

SET(SRCS
    TFT_eSPI.cpp
    main.cpp
)

ADD_DEFINITIONS(-DSETUP_OPI_ZERO_ILI9341_PARALLEL)

ADD_EXECUTABLE(tftdemo ${SRCS})

SET(TARGET_HOST 192.168.1.229)

TARGET_LINK_LIBRARIES(tftdemo stdc++ m gpiodcxx gpiod)

ADD_CUSTOM_COMMAND(TARGET tftdemo POST_BUILD COMMAND scp $<TARGET_FILE:tftdemo> ${TARGET_HOST}:)
